--- a/style.css
+++ b/style.css
@@ -53,6 +53,47 @@
 }
 .flower-container{
     display: flex;
-    justify-content: space-around;
-    align-items: center;
+    justify-content: center;
+    margin-top: 50px;
+    gap: 20px;
+}
+.card-1{
+    width: 420px;
+    height: 530px;
+    border-radius: 300px 300px 0px 0px;
+    background: rgba(167, 33, 98, 0.15);
+}
+.flower-img{
+    padding-top: 102px;
+    padding-left: 60px;
+}
+.card-2{
+    width: 420px;
+    height: 530px;
+    border-radius: 300px 300px 0px 0px;
+    background:  rgba(5, 151, 160, 0.15);
+}
+.flower-img-2{
+    padding-top: 105px;
+    padding-left: 45px;
+
+}
+.card-3{
+    width: 420px;
+    height: 530px; 
+    border-radius: 300px 300px 0px 0px;
+    background: rgba(71, 125, 17, 0.15); 
+}
+.flower-img-3{
+    padding-top: 60px;
+    padding-left: 55px;
+}
+.flower-title{
+    display: flex;
+    justify-content: center;
+    gap: 300px;
+    font-size: 25px;
+    margin-top: 30px;
+     list-style: none;
+     text-decoration: underline;
 }
