--- a/style.css
+++ b/style.css
@@ -97,3 +97,30 @@
      list-style: none;
      text-decoration: underline;
 }
+/* service section */
+.service-container{
+    display: flex;
+    justify-content:space-around;
+    align-items: center;
+    width: 1295px;
+    height: 250px;
+    margin: auto;
+    margin-top: 30px;
+    border-radius: 8px;
+    background: rgba(39, 39, 39, 0.05);
+    padding: 10px;
+}
+.icon{
+    align-items: center;
+    padding: 10px 100px 20px 100px;
+}
+.icon-title{
+    display: flex;
+    justify-content: space-around;
+    color: rgba(39, 39, 39, 0.80);
+    text-align: center;
+    font-size: 24px;
+    font-weight: 600;
+    line-height: 35px;
+
+}
