--- a/style.css
+++ b/style.css
@@ -124,3 +124,39 @@
     line-height: 35px;
 
 }
+/* sign up */
+
+.sign-up-section{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 80px;
+    background-color: rgba(229, 84, 115, 0.10);
+    padding: 100px;
+    margin-top: 100px;
+}
+.primary{
+    color: #E55473;
+}
+.deal{
+   font-size: 50px;
+   margin-top: 50px;
+}
+.third-description{
+    color: rgba(39, 39, 39, 0.60);
+    text-align: center;
+    margin-top: 20px;
+    font-size: 22px;
+    font-weight: 800;
+    line-height: 30px;
+}
+.sign-up-btn{
+    margin-left: 280px;
+    margin-top: 25px;
+    padding: 20px 43px;
+    border-radius: 8px;
+    font-size: 20px;
+    color: white;
+    background: #E55473;
+    border: none;
+}
