--- a/style.css
+++ b/style.css
@@ -160,10 +160,42 @@
     background: #E55473;
     border: none;
 }
+.ig-section{
+    margin-top: 100px;
+}
 .ig-part{
     display: flex;
     justify-content: center;
     margin-top: 40px;
     align-items: center;
     gap: 30px;
+}
+/* mail section */
+.email-section{
+    background-image: url("./Asset/Rectangle\ 9.png");
+    background-repeat: no-repeat;
+    align-items: center;
+    width: 1440px;
+    height: 440px;
+    margin: auto;
+    margin-top: 100px;
+    border-radius: 8px;
+    padding-top: 80px;
+}
+.enter-email{
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    margin-top: 20px;
+    gap: 15px;
+}
+.email-com{
+    width: 40%;
+    margin-top: 25px;
+    padding: 20px 43px;
+    border-radius: 8px;
+    gap: 10px;
+    font-size: 20px;
+    color: black;
+    border: None;
 }
